--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
       <section class="section-first">
            <header class="header">
-               <p class="logo">app.creation</p>
+               <p>
+                 <img class="logo" src="" alt="logo" title="logo">
+               </p>
                <nav class="menu">
                    <a class="menu__item" href="#">start</a>
                    <a class="menu__item" href="#">services</a>
@@ -20,7 +22,9 @@
        
        <section class="section-second">
             <h1 class="title">
-                Building an App <br class="title__1"> Without Design <br> Expertise?
+                Building an App 
+                <br class="title__fill"> Without Design 
+                <br class="title__fill"> Expertise?
             </h1> 
             <article>
               I help tech startups design better digital 
