mistake in url to fonts.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>CSS Final AppCreation</title>
-    <link rel="stylesheet" href="../fonts.css">
+    <link rel="stylesheet" href="./fonts.css">
   </head>
   <body>
       <section class="section-first">
