add styles to first section and header

--- a/index.html
+++ b/index.html
@@ -4,38 +4,45 @@
     <meta charset="UTF-8">
     <title>CSS Final AppCreation</title>
     <link rel="stylesheet" href="./fonts.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
       <section class="section-first">
            <header class="header">
                <p>
-                 <img class="logo" src="" alt="logo" title="logo">
+                 <img class="logo" src="img/logo.png" alt="logo" title="logo">
                </p>
                <nav class="menu">
-                   <a class="menu__item" href="#">start</a>
-                   <a class="menu__item" href="#">services</a>
-                   <a class="menu__item" href="#">about</a>
-                   <a class="menu__item" href="#">blog</a>
-                   <a class="menu__item" href="#">contact us</a>
+                   <a class="menu__start" href="#">start</a>
+                   <a class="menu__services" href="#">services</a>
+                   <a class="menu__about" href="#">about</a>
+                   <a class="menu__blog" href="#">blog</a>
+                   <a class="menu__contact-us" href="#">contact us</a>
                </nav>
            </header>
        </section> 
        
        <section class="section-second">
+        <p>
+           <img class="frame" src="img/frame.png" alt="frame" title="frame">
+           <img class="fill_wd" src="img/fill_wd.png" alt="frame" title="fill_wd">
+           <img class="fill_exp" src="img/fill_exp.png" alt="frame" title="fill_exp">
+         </p>
             <h1 class="title">
                 Building an App 
-                <br class="title__fill"> Without Design 
-                <br class="title__fill"> Expertise?
+                <br> Without Design 
+                <br> Expertise?
             </h1> 
-            <article>
+            <article class="article">
               I help tech startups design better digital 
               <br>products without hiring a full-time designer
             </article>
-            <button class="button"> Schedule free consultation
+            <button class="button">
+              <p class="button__text">Schedule free consultation</p> 
             </button>
         </section>
     <footer class="footer">
-      <img src="" alt="logo footer" title="logo footer">
+      <img src="img/footer__logo.png" alt="logo footer" title="logo footer">
     </footer>    
   </body>
 </html>
