--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <title>CSS Final AppCreation</title>
     <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./style.css">
@@ -11,22 +12,32 @@
            <header class="header">
                <p>
                  <img class="logo" src="img/logo.png" alt="logo" title="logo">
+                 <img class="logo_mob" src="img/logo_mob.png" alt="logo_mob" title="logo_mob">
                </p>
-               <nav class="menu">
-                   <a class="menu__start" href="#">start</a>
-                   <a class="menu__services" href="#">services</a>
-                   <a class="menu__about" href="#">about</a>
-                   <a class="menu__blog" href="#">blog</a>
-                   <a class="menu__contact-us" href="#">contact us</a>
-               </nav>
+               <div class="menu">
+                <div class="menu__links-item">
+                   <span class="menu__start">start</span>
+                   <span class="menu__services">services</span>
+                   <span class="menu__about">about</span>
+                   <span class="menu__blog">blog</span>
+                   <span class="menu__contact-us">contact us</span>
+                </div>
+               </div>
+               <div class="menu__icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
            </header>
        </section> 
        
        <section class="section-second">
         <p>
            <img class="frame" src="img/frame.png" alt="frame" title="frame">
-           <img class="fill_wd" src="img/fill_wd.png" alt="frame" title="fill_wd">
-           <img class="fill_exp" src="img/fill_exp.png" alt="frame" title="fill_exp">
+           <img class="fill_wd" src="img/fill_wd.png" alt="fill_wd" title="fill_wd">
+           <img class="fill_exp" src="img/fill_exp.png" alt="fill_exp" title="fill_exp">
+           <img class="line_menu" src="img/line_menu.png" alt="line_menu" title="line_menu">
          </p>
             <h1 class="title">
                 Building an App 
